apps/wishlist/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wishlist
  labels:
    app.kubernetes.io/part-of: wishlist
